# firstcut_testing_libs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  test_document.html  test_langextract_api.py
docs/: README.md  pluggable_extractors_prd.md
examples/: demo_legal_events.py  guaranteed_table_app.py  legal_events_app.py  simple_legal_table_app.py  simple_process_app.py
sample_pdf/: famas_dispute
scripts/: LANGEXTRACT_TROUBLESHOOTING.md  benchmark_combinations.py  benchmark_docling_configs.py  check_langextract.py  check_opencode_zen.py  check_openrouter.py  extract_scanned_pdf.py  list_pdfs.py  measure_detection_overhead.py  ocr_engine_war.py  probe_opencode_zen.py  quick_provider_test.py  review_helper.py  run_benchmark_phase2.py  run_provider_comparison.py  test_all_models.py  test_anthropic.py  test_deepseek.py  test_deepseek_openrouter.py  test_fallback_models.py  test_ocr_autodetect.py  test_ocr_llm_vs_docling.py  test_openai.py  test_opencode_zen.py  test_opencode_zen_models.py  test_openrouter.py  test_providers_on_ocr.py  validate_judge_panel.py  validate_llm_judge.py  validate_timing.py  verify_langextract_examples.py  verify_ocr_libs.py
src/: __init__.py  main.py
tests/: MANUAL_TESTING_PROCEDURES.md  conftest.py  run_all_tests.py  test_acceptance_criteria.py  test_docling_parsev4_fix.py  test_extractor_factory.py  test_openai_adapter.py  test_opencode_zen_adapter.py  test_openrouter_adapter.py  test_performance_integration.py  test_report_20250924_184850.json  test_report_20251001_114413.json  (+3 more)
(+92 files in other folders)
